# pai-bench-c-fix-depth-dover

./: .gitignore  README.md
conditional_generation/: compute_metrics.py  decord.py  pyproject.toml
conditional_generation/benchmark_pipelines/scores/transfer_bench/: metrics_canny_blur_depth.py  segmentation_metrics.py  video_to_canny_and_blur.py
conditional_generation/models/: dover.py  grounded_sam_v2.py
predict/: evaluate_vqa.py
predict/pbench/: vqa_evaluation.py
