[project]
name = "paibench-conditional-generation"
version = "1.0.0"
description = "PAI Bench Conditional Generation: A Physical AI Benchmark for Conditional Video Generation"
authors = [{name = "PAI Bench Contributors", email = "ziqi002@e.ntu.edu.sg"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "opencv-python-headless",
    "torch",
    "torchvision",
    "loguru",
    "matplotlib",
    "scipy",
    "numpy",
    "tqdm",
    "timm",
    "einops",
    "scikit-video",
    "transformers==4.46.3",  # must match imaginaire4 — GroundingDINO post-processing differs across major versions
    "sam2==1.1.0",  # must match imaginaire4 — sam2_video_predictor propagation logic differs across versions
    "hydra-core",
    "attrs",
    "pandas",
    "psycopg2-binary",
    "pyarrow",
    "sqlalchemy",
    "tenacity",
    "cattrs",
    "click",
    "ray",
    "pycocotools",
    "imageio",
    "webdataset",
    "imageio-ffmpeg",
    "lpips",
    "easydict",
    # "xformers",  # removed: 0.0.35 has no CUDA kernels for GB200 (sm_100); fallback to PyTorch native attention
    "scikit-image",
    "typer",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
